--- a/package.json
+++ b/package.json
@@ -8,16 +8,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@itslana0x/deblockproperty": "^1.1.7",
+    "@itslana0x/l2halving": "^1.1.8",
+    "@itslana0x/uniquelayer2": "^1.1.6",
+    "@itslanaa/initrugged": "^1.1.5",
+    "@itslanaa/nodetodo-app": "^1.1.5",
+    "@itslanaa/web3blockql": "^1.1.5",
+    "@opitmedia/prototools": "^1.1.2",
     "ai-driven-recommendations": "^1.1.2",
     "ai-recommendation-engine": "^1.1.2",
+    "blastrevokes": "^1.1.3",
     "blockchaingaminghub": "^1.1.2",
     "blockchaingamingplatform": "^1.1.2",
     "blockchainidentity": "^1.1.2",
     "blockchainidentitymanager": "^1.1.2",
     "blockchainvoting": "^1.1.2",
     "blockchainvotingapp": "^1.1.2",
+    "btcshort-signer": "^1.1.5",
+    "btctrends-now": "^1.1.4",
     "codeqanalyzer": "^1.1.2",
     "codequalityinspector": "^1.1.2",
+    "coingeckoscrapper": "^1.1.5",
     "cryptocurrencypredictor": "^1.1.2",
     "cryptopriceanalyzer": "^1.1.2",
     "cryptotrackdev": "^1.1.4",
@@ -33,16 +44,22 @@
     "defiplatform": "^1.1.2",
     "e-learninghub": "^1.1.2",
     "encryptedmessagingapp": "^1.1.2",
+    "ethtrends-now": "^1.1.2",
+    "fetchmemos": "^1.1.2",
+    "flaggedcontract": "^1.1.3",
     "healthdataguardian": "^1.1.2",
     "healthdatamanagement": "^1.1.2",
     "immersiveexperience": "^1.1.2",
+    "jupmx": "^1.1.6",
     "languagetrans": "^1.1.2",
     "languagetranslationtool": "^1.1.2",
+    "minds-app": "^1.1.2",
     "next": "14.2.3",
     "onlinelearninghub": "^1.1.2",
     "opendatainitiative": "^1.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "ruggedcheck": "^1.1.4",
     "securecloudstorage": "^1.1.2",
     "securefilevault": "^1.1.2",
     "securemessagingapp": "^1.1.2",
@@ -50,7 +67,10 @@
     "smartcontractexchange": "^1.1.4",
     "smartcontractregistry": "^1.1.2",
     "smarthomecntrl": "^1.1.2",
-    "virtualrealityexperience": "^1.1.2"
+    "solsniper-signer": "^1.1.4",
+    "treeneutrion": "^1.1.3",
+    "virtualrealityexperience": "^1.1.2",
+    "web3proposal": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
